--- a/index.html
+++ b/index.html
@@ -604,6 +604,11 @@
                 <button id="export-json" class="btn-accent">
                     <i class="fas fa-file-code"></i>Export as JSON
                 </button>
+                <div id="install-button" class="hidden">
+  <button class="download-btn">
+    <i class="fas fa-download"></i>Install App
+  </button>
+</div>
             </div>
             
             <div class="download-section">
@@ -1383,3 +1388,4 @@ function exportExcel() {
 </body>
 
 </html>
+
