--- a/index.html
+++ b/index.html
@@ -39,6 +39,26 @@
             min-height: 100vh;
             padding-bottom: 20px;
          }
+        .hidden {
+  display: none;
+}
+
+.btn-warning {
+  background: var(--warning);
+}
+
+.btn-warning:hover {
+  background: #e67e22;
+}
+
+.download-btn {
+  background: var(--accent);
+  margin-top: 10px;
+}
+
+.download-btn:hover {
+  background: #219653;
+}
         
         .container {
             width: 100%;
@@ -1388,4 +1408,5 @@ function exportExcel() {
 </body>
 
 </html>
+
 
