--- a/index.html
+++ b/index.html
@@ -807,8 +807,8 @@
                     <label for="date">Date</label>
                     <div class="date-input-container">
                         <input type="date" id="date" required>
-                        <button type="button" class="date-today-btn" id="today-btn">Today</button>
-                        <button type="button" class="date-yesterday-btn" id="yesterday-btn">Yesterday</button>
+                        <button type="button" class="date-today-btn hidden" id="today-btn">Today</button>
+                        <button type="button" class="date-yesterday-btn hidden" id="yesterday-btn">Yesterday</button>
                     </div>
                 </div>
                 
@@ -2087,3 +2087,4 @@
     </script>
 </body>
 </html>
+
