--- a/index.html
+++ b/index.html
@@ -993,7 +993,7 @@
                         <label for="modal-date">Date</label>
                         <div class="date-input-container">
                             <input type="date" id="modal-date" required>
-                            <button type="button" class="date-today-btn" id="modal-today-btn">Today</button>
+                            <button type="button" class="date-today-btn hidden" id="modal-today-btn">Today</button>
                         </div>
                     </div>
                     
@@ -2087,4 +2087,5 @@
     </script>
 </body>
 </html>
+
 
