--- a/index.html
+++ b/index.html
@@ -957,7 +957,9 @@
             </div>
             
             <div class="download-section">
-                <h3><i class="fas fa-download"></i> Download App</h3>
+                <h3><i class="fas fa-Hii"></i> Thank You</h3>
+<!--                 <p>You can install this app on your device for offline use:</p> -->
+<!--                 <h3><i class="fas fa-download"></i> Download App</h3>
                 <p>You can install this app on your device for offline use:</p>
                 <div id="install-button" class="hidden">
                     <button class="download-btn" id="installBtn">
@@ -967,7 +969,7 @@
                 <div id="not-supported" class="hidden">
                     <p style="color: #e74c3c;">Your browser does not support app installation.</p>
                 </div>
-                <p><small>In Chrome, look for the "Install" icon in the address bar</small></p>
+                <p><small>In Chrome, look for the "Install" icon in the address bar</small></p> -->
             </div>
         </div>
         
@@ -2087,5 +2089,6 @@
     </script>
 </body>
 </html>
+
 
 
