--- a/index.html
+++ b/index.html
@@ -957,7 +957,7 @@
             </div>
             
             <div class="download-section">
-                <h3><i class="fas fa-Hii"></i> Thank You</h3>
+                <h3><i class="fa-solid fa-copyright"></i> 2025 vG All Right reserved </h3>
 <!--                 <p>You can install this app on your device for offline use:</p> -->
 <!--                 <h3><i class="fas fa-download"></i> Download App</h3>
                 <p>You can install this app on your device for offline use:</p>
@@ -2089,6 +2089,7 @@
     </script>
 </body>
 </html>
+
 
 
 
