--- a/index.html
+++ b/index.html
@@ -223,12 +223,12 @@
             <div class="download-section">
                 <h3><i class="fas fa-download"></i> Download App</h3>
                 <p>You can install this app on your device for offline use:</p>
-<!--                 
+                
                 <div id="install-button" class="hidden">
                     <button class="download-btn" id="installBtn">
                         <i class="fas fa-download"></i>Install App
                     </button>
-                </div> -->
+                </div>
                 
                 <div id="not-supported" class="hidden">
                     <p style="color: #e74c3c;">Your browser does not support app installation.</p>
@@ -330,3 +330,4 @@
 
 
 </html>
+
